# recapi

./: .env  .gitignore  Cargo.toml  README.md  Recapi.sln  package-lock.json  package.json  tsconfig.json
Src/Application/: Application.csproj
Src/Infrastructure/: Infrastructure.csproj
Src/Infrastructure/Identity/: ApplicationDbContext.cs
Src/WebUI/: WebUI.csproj
Tests/Application.UnitTests/: Application.UnitTests.csproj
Tests/Persistence.IntegrationTests/: Persistence.IntegrationTests.csproj
http/: recipes.http
migrations/2024-01-04-212027_initial/: down.sql  up.sql
prisma/: schema.prisma
src/: app.ts  error.rs  index.ts  lib.rs  main.rs  models.rs  schema.rs
src/Application/: Application.csproj  DependencyInjection.cs
src/Common/: Common.csproj  IDateTime.cs
src/Domain/: Domain.csproj
src/Infrastructure/: DependencyInjection.cs  Infrastructure.csproj  MachineDateTime.cs  NotificationService.cs
src/Persistence/: DependencyInjection.cs  DesignTimeDbContextFactoryBase.cs  Persistence.csproj  RecapiDbContext.cs  RecapiDbContextFactory.cs
src/WebUI/: Program.cs  Startup.cs  WebUI.csproj  appsettings.Production.json  appsettings.json  nswag.json
src/controllers/: hello-world.ts  index.ts  recipes.ts
src/decorations/: controller.ts  index.ts  route.ts
src/middleware/: exceptions.ts  index.ts
src/routes/: hello-world.ts  recipes.rs  recipes.ts
src/utils/: index.ts  routeUtils.ts
src2/Infrastructure/: DependencyInjection.cs
tests/Application.UnitTests/: Application.UnitTests.csproj
tests/Domain.UnitTests/: Domain.UnitTests.csproj
(+181 files in other folders)
